service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/part-of: petclinic
    app.openshift.io/runtime-version: latest
  name: petclinic
  namespace: petclinic
spec:
  clusterIP: 172.30.161.249
  clusterIPs:
  - 172.30.161.249
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: petclinic
    deploymentconfig: petclinic
